20240417 ch09 주석 추가

--- a/ch09_resource/src/main/res/values-ko/strings.xml
+++ b/ch09_resource/src/main/res/values-ko/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--res/values-ko 폴더에 있음-->
 <resources>
     <string name="app_name">Ch9_Resource</string>
     <string name="intro_main">
